Appli de base pour dev

--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -3,3 +3,29 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+contact:
+    path: /contact
+    controller: App\Controller\ContactController::index
+
+accueil:
+    path: /
+    controller: App\Controller\HomeController::index
+
+contactModify:
+    # id est dynamique ici
+    path: /contact/modify{id}
+    # après les "::", c'est la méthode appellée
+    controller: App\Controller\ContactController::modify
+    # force l'utilisation d'un caracctère, ici un nombre
+    requirements:
+        id: '\d'
+
+contactDelete:
+    # id est dynamique ici
+    path: /contact/delete{id}
+    # après les "::", c'est la méthode appellée
+    controller: App\Controller\ContactController::delete
+    # force l'utilisation d'un caracctère, ici un nombre
+    requirements:
+        id: '\d'
