--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -1,4 +1,5 @@
 {
+    
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
@@ -21,6 +22,8 @@
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/http-client": "6.3.*",
+        "symfony/http-client-contracts": "^3.4",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
@@ -81,4 +84,9 @@
     "require-dev": {
         "symfony/maker-bundle": "^1.52"
     }
+       
+
+
+    
+       
 }
