--- a/symfony/.env
+++ b/symfony/.env
@@ -27,7 +27,7 @@ APP_SECRET=58b844f2dad7167dbef8eab889463e91
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/symfonyJ4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/cartes"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
