--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -3,47 +3,27 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
-    
-contact:
-    path: /contact
-    #controller: App\Controller\ContactController::index
 
-accueil:
+home:
     path: /
     controller: App\Controller\HomeController::index
 
-contactModify:
+cartesAll:
     # id est dynamique ici
-    path: /contact/modify{id}
-    # après les "::", c'est la méthode appellée
-    controller: App\Controller\ContactController::modify
-    # force l'utilisation d'un caracctère, ici un nombre
-    requirements:
-        id: '\d'
+    path: /cartesAll/
+    controller: App\Controller\CartesAllController::index
 
-creationCard:
+cartesPerso:
+    # id est dynamique ici
+    path: /cartesPerso/
+    controller: App\Controller\CartesPersoController::index
+
+creationCarte:
     # id est dynamique ici
     path: /creation/
-    controller: App\Controller\CreationController::index
+    controller: App\Controller\CreationCarteController::index
 
-modificationCard:
+modifCarte:
     # id est dynamique ici
-    path: /modification/
-    controller: App\Controller\ModificationController::index
-
-persoCard:
-    # id est dynamique ici
-    path: /perso/
-    controller: App\Controller\PersoController::index
-    
-   
-  
-
-contactDelete:
-    # id est dynamique ici
-    path: /contact/delete{id}
-    # après les "::", c'est la méthode appellée
-    controller: App\Controller\ContactController::delete
-    # force l'utilisation d'un caracctère, ici un nombre
-    requirements:
-        id: '\d'
+    path: /modif/
+    controller: App\Controller\ModifCarteController::index
